@@ -13,6 +13,7 @@ Version 1.4.1:
 - VPS2012 CPU Quota fix
 - HyperVR2+ fix to delete unused interface - With thanks to Genadij Judin
 - Added VMConfig backward compatibility for the WSPanel - With thanks to Genadij Judin
+- Change to fix Disabled User when Exchange schema is not applied
 
 Version 1.4.0:
 - Added Microsoft SQL 2017 support (Installer & Portal)
